@@ -1,5 +1,10 @@
 Revision history for Perl extension MooseX-Getopt
 
+{{NEXT}}
+  * MooseX::Getopt::GLD
+    - change it to a MooseX::Role::Parameterized, so that it accepts
+      'getopt_conf' parameter (Damien Krotkine)
+
 0.35 Wed 09 Feb 2011
   * Fix missed change from Test::Exception to Test::Fatal
 
